--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <form action="#">
         <label class="userlabel" for="username">
           <input class="username" name="username" type="text" placeholder="foydalanuvchi nomi">
-          <h1>Siz login va parolni bilasiz*</h1>
+          <h1>login: username, password: password</h1>
         </label>
         <label for="password">
           <input class="password" name="password" type="password" placeholder="foydalanuvchi paroli">
